fix - CreateListModal background not covering whole page

--- a/root/frontend/src/components/CreateListModal/CreateListModal.css
+++ b/root/frontend/src/components/CreateListModal/CreateListModal.css
@@ -1,8 +1,8 @@
 .modal-background {
-  position: absolute;
+  position: fixed;
   max-width: 100%;
   width: 100vw;
-  height: 101%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 11;
   display: flex;
