--- a/root/frontend/src/index.css
+++ b/root/frontend/src/index.css
@@ -4,11 +4,11 @@
 }
 
 html {
-  height: 101%;
+  height: 100%;
 }
 
 body > #root {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: auto;
 }
